--- a/index.html
+++ b/index.html
@@ -12,12 +12,16 @@
         }
         #button {
             background-color: beige;
+            width:150px;
+            padding: 3px;
+            margin: 3px;
         }
     </style>
     <body>
         Iframe test
+        <div id="button">click me</div>
         <div id="content">...</div>
-        <div id="button">...</div>
+       
     </body>
     <script>
         document.addEventListener("message", (e) => {
